--- a/Connect4.html
+++ b/Connect4.html
@@ -80,6 +80,6 @@
     integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
     crossorigin="anonymous">
     </script>
-    <script src = "Connect4JS.js"></script>
+    <script src = "Connect4Js.js"></script>
 </body>
 </html>
